# Sistema-PGCop-UFBA

./: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  Makefile.cur  Makefile.txt  README.md  alembic.ini  algo.txt  docker-compose.yml  getting-started.md  make-github-workflow.sh  make-linux.sh  make-windows.ps1  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: python-app.yml
docs/: README.md  arquitetura_sistema.drawio  getting-started.md
scripts/: make-github-workflow.sh  make-linux.sh  make-windows.ps1
src/api/: __main__.py  app.py  config.py  html_loader.py  vercel.py
src/api/database/: __init__.py  repository.py  session.py
src/api/database/alembic/: env.py
src/api/database/models/: aluno.py  base_model.py  entity_model_base.py  professor.py  solicitacoes.py  tarefa.py  tarefa_base.py  tarefas_base.py  tipo_usuario.py  usuario.py
src/api/entrypoints/: __init__.py  router.py
src/api/entrypoints/aluno/: __init__.py  schema.py  views.py
src/api/entrypoints/alunos/: __init__.py  errors.py  schema.py  views.py
src/api/entrypoints/mailer/: __init__.py  schema.py  views.py
src/api/entrypoints/monitoring/: __init__.py  views.py
src/api/entrypoints/new_password/: __init__.py  errors.py  schema.py  views.py
src/api/entrypoints/professores/: __init__.py  errors.py  schema.py  views.py
src/api/entrypoints/solicitacao/: schema.py  views.py
src/api/entrypoints/tarefas/: __init__.py  errors.py  schema.py  views.py
src/api/entrypoints/tarefas_base/: __init__.py  errors.py  schema.py  views.py
src/api/entrypoints/token/: __init__.py  schema.py  views.py
src/api/entrypoints/usuario/: __init__.py  schema.py  views.py
src/api/entrypoints/usuarios/: __init__.py  errors.py  schema.py  views.py
src/api/exceptions/: credentials_exception.py  http_service_exception.py  validation_exception.py  value_error_validation_exception.py
src/api/mailsender/: __init__.py  localmail.py  mailer.py
src/api/mailsender/workers/: __init__.py  abstract.py  task.py
src/api/schemas/: usuario.py
src/api/services/: aluno.py  auth.py  mailsender.py  new_password.py  nova_senha.py  professor.py  servico_base.py  solicitacao.py  tarefa.py  tarefa_base.py  tipo_usuario.py  usuario.py  usuario_tipo_base.py  validador.py
src/api/templates/: new_password_token.html  task.py  task_near_to_deadline.html  task_past_to_deadline.html
src/api/tests/: algo.txt  application.py  conftest.py  test_application.py  test_default_task_routes.py  test_login_route.py  test_mailer.py  test_professor_routes.py  test_set_new_password.py  test_student_routes.py  test_student_task_routes.py  test_task_routes.py  test_user_routes.py
src/api/tests/core/: application.py  base_professor.py  base_student.py  base_user.py  (+2 more)
src/api/utils/: constantes.py  decorators.py  enums.py
src/tests/: conftest.py
src/tests/core/: application.py  base_default_task.py  base_professor.py  base_student.py  base_student_task.py  mocked_database.py
src/tests/e2e/: test_application.py  test_default_task_routes.py  test_login_route.py  test_mailer.py  test_professor_routes.py  test_set_new_password.py  test_student_routes.py  test_student_task_routes.py
(+17 files in other folders)
