[tool.poetry]
name = "fastapi-backend"
version = "0.0.1"
description = "A FastAPI backend."
authors = ["Tauane Sales <tauanesales@ufba.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
loguru = "^0.7.2"
httpx = "^0.27.0"
fastapi-cache2 = "^0.2.1"


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.7.0"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
coverage = "^7.4.4"
pytest-asyncio = "^0.23.5.post1"
pytest-mock = "^3.12.0"

[tool.coverage.run]
branch=true
source = ["src/api"]
omit = [
    "src/api/__main__.py",
    "src/api/config.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
