[tool.poetry]
name = "fastapi-backend"
version = "1.9.0"
description = "A FastAPI backend."
authors = ["Tauane Sales <tauanesales@ufba.br>"]
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "~3.9"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
loguru = "^0.7.2"
httpx = "^0.27.0"
fastapi-cache2 = "^0.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
mysql-connector-python = "^8.3.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
passlib = "^1.7.4"
bcrypt = "^4.1.2"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
sendgrid = "^6.11.0"
python-dotenv = "^1.0.1"
pytest = "^8.1.1"
pyodbc = "^5.1.0"
pydantic-br = "^1.0.0"
mysqlclient = {version = "^2.2.4", platform = "win32"}
pytest-dependency = "^0.6.0"
alembic = "^1.13.1"
pydantic-extra-types = "^2.8.2"
phonenumbers = "^8.13.39"
strenum = "^0.4.15"
async-asgi-testclient = "^1.4.11"
asyncmy = "^0.2.9"
cryptography = "^42.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
coverage = "^7.4.4"
pytest-asyncio = "^0.23.5.post1"
pytest-mock = "^3.12.0"
black = "^24.3.0"
pre-commit = "^3.7.1"

[tool.coverage.run]
branch=true
source = ["src/api"]
omit = [
    "src/api/__main__.py",
    "src/api/config.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
